# document-translator

./: .env.example  README.md  license  main.py  makefile  pyproject.toml  readme.md
.github/workflows/: release.yml
doculingo/: __main__.py
doculingo/common/: settings.py
document_translator/: __main__.py  main.py
document_translator/common/translators/: __init__.py  open_ai_translator.py
document_translator/word/: __init__.py  styler.py
tests/: test_styler.py  test_word.py
