[project]
name = "document-translator"
version = "0.1.0"
description = "Tool to translate big documents using LLMs."
readme = "README.md"
authors = [
    { name = "Leynier Gutiérrez González", email = "leynier41@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["document", "translation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"

dependencies = [
    "openai>=1.31.0",
    "pydantic[all]>=2.7.3",
    "typer[all]>=0.12.5",
    "pydantic-settings>=2.3.0",
    "python-docx>=1.1.2",
]

[dependency-groups]
dev = ["ruff>=0.4.7"]

[project.scripts]
document-translator = "document_translator.main:app"

[project.urls]
homepage = "https://github.com/leynier/document-translator"
documentation = "https://github.com/leynier/document-translator"
repository = "https://github.com/leynier/document-translator"
issues = "https://github.com/leynier/document-translator/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["document_translator"]
